# bethesolver

./: .gitignore  CMakeLists.txt  README.md
BetheRoots/: BetheRootsL10M1.txt  BetheRootsL10M2.txt  BetheRootsL10M3.txt  BetheRootsL10M4.txt  BetheRootsL10M5.txt  BetheRootsL11M1.txt  BetheRootsL11M2.txt  BetheRootsL11M3.txt  BetheRootsL11M4.txt  BetheRootsL11M5.txt  BetheRootsL12M1.txt  BetheRootsL12M2.txt  BetheRootsL12M3.txt  BetheRootsL12M4.txt  BetheRootsL12M5.txt  BetheRootsL12M6.txt  BetheRootsL2M1.txt  BetheRootsL3M1.txt  BetheRootsL4M1.txt  BetheRootsL4M2.txt  BetheRootsL5M1.txt  BetheRootsL5M2.txt  BetheRootsL6M1.txt  BetheRootsL6M2.txt  BetheRootsL6M3.txt  BetheRootsL7M1.txt  BetheRootsL7M2.txt  BetheRootsL7M3.txt  BetheRootsL8M1.txt  BetheRootsL8M2.txt  BetheRootsL8M3.txt  BetheRootsL8M4.txt  BetheRootsL9M1.txt  BetheRootsL9M2.txt  BetheRootsL9M3.txt  BetheRootsL9M4.txt  The files in this folder are generated by the mathematica code.txt
cnn/: dog_vs_cat.ipynb
src/: BetheFunctions.cpp  BetheFunctions.h  BetheHomotopy.cpp  BetheHomotopy.h  BethePolynomialHomotopy.cpp  BethePolynomialHomotopy.h  BethePolynomials.cpp  BethePolynomials.h  BetheRootCache.cpp  BetheRootCache.h  CMakeLists.txt  Function.h  Homotopy.cpp  Homotopy.h  HomotopyContinuation.cpp  HomotopyContinuation.h  InfiniteRoots.cpp  InfiniteRoots.h  RootFitter.cpp  RootFitter.h  SimpleBetheHomotopy.cpp  SimpleBetheHomotopy.h  Solution.cpp  Solution.h  Statistics.h  common.h  main.cpp
src/test/: BetheEquationTests.cpp  BetheFunctionTests.cpp  BetheHomotopyTests.cpp  BetheRootCacheTests.cpp  demo.cpp  (+4 more)
